--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,9 +3,10 @@
 
 body {
   font-family: "Noto Sans KR";
-  background-color: #0F2C67;
-  color: #F4E185;
+  background-color: #211f20;
+  color: #cccbcb;
   margin: 0;
+  margin-top: 80px;
 }
 
 ul {
@@ -24,12 +25,12 @@ ul {
 
 .MainWhole {
   text-align: center;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 }
 
-.MainWhole .Title {
-  color: #F3950D;
-}
+/* .MainWhole .Title {
+  
+} */
 
 .MainBody {
   text-align: left;
