--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -1,7 +1,7 @@
 .Nav_whole {
     width: 100%;
     height: 80px;
-    background-color: #861212;
+    background-color: #333333;
     color: #CD1818;
 
     position: fixed;
@@ -9,16 +9,26 @@
     z-index: 999;
 
     .hamberger {
-        font-size: 50px;
         
-        &:hover {
-            font-size: 55px;
-            transition: all 0.5ms ease;
+
+        p {
+            margin-top: 0;
+            margin-bottom: 5px;
+            font-size: 50px;
+            width: 100px;
             cursor: pointer;
+
+            &:hover {
+                margin-left: 10px;
+                transition: all 0.3s ease;
+                
+            }
+
+            &:active {
+                margin-left: 5px;
+                transition: all 0.1s ease;
+            }
         }
 
-        &:active {
-            margin-top: 5px;
-        }
     }
 }
