add top btn, home text align, css set

--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,20 +1,35 @@
 .Home_whole {
 
-
     text-align: center;
-    list-style: none;
+    
 
-    ul {
-        margin-top: 100px;
-        li a {
-            font-size: 40px;
-            font-weight: 500;
-            text-decoration: none;
-            color: inherit;
 
-            &:hover {
-                color: #F3950D;
+    .Home_ul {
+
+        text-align: left;
+        position: absolute;
+        // transform: translate(-50%, -50%);;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        ul {
+            // text-align: left;
+            list-style: none;
+            
+            margin-top: 100px;
+            li a {
+                font-size: 40px;
+                font-weight: 500;
+                text-decoration: none;
+                color: inherit;
+    
+                &:hover {
+                    color: #F3950D;
+                }
             }
         }
     }
+
+
 }
