--- a/src/style/Layout.scss
+++ b/src/style/Layout.scss
@@ -64,3 +64,38 @@
         display: none;
     }
 }
+
+.topBtn {
+    
+    position: fixed;
+    top: 82%;
+    left: 93%;
+    opacity: 0.3;
+    border: 1px solid white;
+    padding: 5px;
+    text-align: center;
+    align-items: center;
+    background-color: white;
+    color: #00aa6c;
+    border-radius: 50%;
+    font-size: 25px;
+    font-weight: 700;
+    width: 50px;
+    height: 50px;
+    z-index: 999;
+    
+    div {
+        padding: 7%;
+        cursor: pointer;
+    }
+
+    &:hover {
+        opacity: 0.8;
+    }
+
+    &:active {
+        opacity: 0.5;
+        margin-top: 10px;
+        transition: all 0.2s ease;
+    }
+}
